--- a/ClienteAndroid/app/src/main/res/values-en/strings.xml
+++ b/ClienteAndroid/app/src/main/res/values-en/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_name">TMS</string>
     <string name="act_login_button_login">Login</string>
     <string name="act_login_input_username">Username</string>
@@ -17,4 +17,8 @@
     <string name="act_dashboard_message_app">Schedules management system</string>
     <string name="act_dashboard_message_exit">Disconnect</string>
     <string name="act_dashboard_message_disconnected">Disconnecting from the system...</string>
+    <string name="item_teacher_name">Name</string>
+    <string name="item_teacher_department">Department: <xliff:g example="-" id="department">%s</xliff:g></string>
+    <string name="item_teacher_abreviation">Abreviation: <xliff:g example="-" id="abreviation">%s</xliff:g></string>
+    <string name="act_teachers_title">Teachers</string>
 </resources>
